traduction de certains éléments pour les pages en anglais

--- a/en/about.html
+++ b/en/about.html
@@ -46,14 +46,14 @@
     <main>
 
         <div>
-            <h2 class="top__title">Informations à propos du créateur</h2>
+            <h2 class="top__title">Informations about the creator</h2>
         </div>
 
         <div>
             <p class="informations__text">Tasnim KEBAILI MMI 1 B2</p>
-            <p class="informations__text">Je me nomme Tasnim Kebaili. Je suis étudiant en première année du BUT MMI à l’IUT Belfort-Montbéliard.</p>
-            <p class="informations__text">J’ai réalisé ce site dans le cadra d’un projet individuel scolaire.</p>
-            <p class="informations__text">Le site a été designé et développé avec mes connaissances</p>
+            <p class="informations__text">My name is Tasnim Kebaili. I'm a first-year BUT MMI student at IUT Belfort-Montbéliard.</p>
+            <p class="informations__text">I created this site as part of an individual school project.</p>
+            <p class="informations__text">The site was designed and developed with my knowledge.</p>
         </div>
 
     </main>
