--- a/en/glossary.html
+++ b/en/glossary.html
@@ -50,21 +50,21 @@
             <div class="top__img"><img src="/public/img/GLOSSARY.webp" alt="Photo glossaire"></div>
         </header>
     
-        <h2 class="top__titlee">Glossaire</h2>
+        <h2 class="top__titlee">Glossary</h2>
 
         <div>
             <h3 class="article__title">Hakuna Matata</h3>
-            <p class="article__text">Une expression swahilie qui signifie littéralement "pas de problème" ou "pas de soucis". Elle est devenue célèbre grâce au film "Le Roi Lion" de Disney et est associée à une philosophie de vie insouciante.</p>
+            <p class="article__text">A Swahili expression literally meaning "no problem" or "no worries". It became famous thanks to the Disney film "The Lion King" and is associated with a carefree philosophy of life.</p>
         </div>
 
         <div>
-            <h3 class="article__title">Philosophie de vie</h3>
-            <p class="article__text">Une approche de la vie qui repose sur une série de croyances et de valeurs qui guident les choix et les actions d'une personne. La philosophie de vie "Hakuna Matata" prône la légèreté, la joie et l'acceptation de ce qui advient</p>
+            <h3 class="article__title">Philosophy of life</h3>
+            <p class="article__text">An approach to life based on a set of beliefs and values that guide a person's choices and actions. The "Hakuna Matata" philosophy of life advocates lightness, joy and acceptance of what happens</p>
         </div> 
 
         <div>
-            <h3 class="article__title">Adaptation Cinématographique</h3>
-            <p class="article__text">Adaptation Cinématographique : Le processus de transformation d'un texte, d'une histoire ou d'une œuvre littéraire en un film. Le film "Le Roi Lion" est une adaptation cinématographique du célèbre dessin animé de Disney.</p>
+            <h3 class="article__title">Film adaptation</h3>
+            <p class="article__text">The process of transforming a text, story or literary work into a film. The Lion King" is a film adaptation of the famous Disney cartoon.</p>
         </div>
     
     </main>
