--- a/en/music.html
+++ b/en/music.html
@@ -53,53 +53,53 @@
         <section class="article">
 
             <div>
-                <h3 class="article__title">L’hymne de la joie et de l’insouciance</h3>
-                <p class="article__text">La musique a le pouvoir de toucher nos âmes et de nous transporter vers des mondes lointains. L'une de ces mélodies emblématiques est "Hakuna Matata", issue du film "Le Roi Lion" de Disney. Cette chanson est bien plus qu'une simple mélodie entraînante ; elle incarne une philosophie de vie, un appel à l'insouciance et à la joie. Dans cet article, nous plongeons dans les profondeurs de "Hakuna Matata" et de son impact durable.</p>
+                <h3 class="article__title">The hymn of joy and carefree spirit</h3>
+                <p class="article__text">Music has the power to touch our souls and transport us to distant worlds. One such iconic melody is "Hakuna Matata", from Disney's The Lion King. This song is much more than just a catchy melody; it embodies a philosophy of life, a call to carefreeness and joy. In this article, we delve into the depths of "Hakuna Matata" and its lasting impact.</p>
             </div>
 
             <div>
-                <h3 class="article__title">Une mélodie envoutante</h3>
-                <p class="article__text">La chanson "Hakuna Matata" est une composition magistrale, créée par Elton John et Tim Rice. Elle est interprétée par les personnages Timon et Pumbaa, deux amis farfelus que Simba rencontre lorsqu'il s'enfuit de la Terre des Lions. La musique, accompagnée de paroles entraînantes, transporte les auditeurs dans un état d'esprit insouciant et positif.</p>
+                <h3 class="article__title">A bewitching melody</h3>
+                <p class="article__text">The song "Hakuna Matata" is a masterly composition, created by Elton John and Tim Rice. It is performed by the characters Timon and Pumbaa, two eccentric friends whom Simba meets when he escapes from Lion's Land. The music, accompanied by catchy lyrics, transports listeners into a carefree, positive frame of mind.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                     <img src="/public/img/MUSIC2.webp" alt="Timon, Pumba et Simba extrait film" class="article__image">
-                    <figcaption class="article__description">Image tirée du film : Simba , Timon et Pumba</figcaption>
+                    <figcaption class="article__description">Image from the film: Simba , Timon and Pumba</figcaption>
                 </figure>
             </div>
 
             <div>
-                <h3 class="article__title">Pas de problème</h3>
-                <p class="article__text">L'expression "Hakuna Matata" est originaire de la langue swahilie et se traduit littéralement par "pas de problème" ou "pas de soucis". Par extension, elle incarne une philosophie de vie qui invite à ne pas laisser les préoccupations et les soucis de la vie nous accabler. C'est une invitation à vivre le moment présent, à embrasser la légèreté et à faire confiance au destin.</p>
+                <h3 class="article__title">No problem at all</h3>
+                <p class="article__text">The expression "Hakuna Matata" originates from the Swahili language and literally translates as "no problem" or "no worries". By extension, it embodies a philosophy of life that invites us not to let life's concerns and worries weigh us down. It's an invitation to live in the moment, embrace lightness and trust in fate.</p>
             </div>
 
             <div>
-                <h3 class="article__title">Le refuge de Simba</h3>
-                <p class="article__text">Dans le film, "Hakuna Matata" devient un mantra pour Simba, le jeune lion en exil. Il adopte cette philosophie après avoir fui la Terre des Lions, où il se sent coupable de la mort de son père, Mufasa. Grâce à Timon et Pumbaa, Simba trouve un refuge dans cette nouvelle manière de vivre. La chanson devient un point culminant du film, exprimant la transformation de Simba en un adulte insouciant.</p>
+                <h3 class="article__title">Simba's refuge</h3>
+                <p class="article__text">In the film, "Hakuna Matata" becomes a mantra for Simba, the young lion in exile. He adopts this philosophy after fleeing Lion's Land, where he feels guilty about the death of his father, Mufasa. Thanks to Timon and Pumbaa, Simba finds refuge in this new way of life. The song becomes a highlight of the film, expressing Simba's transformation into a carefree adult.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                     <img src="/public/img/MUSIC3.webp" alt="Simba extrait film" class="article__image">
-                    <figcaption class="article__description">Image tirée du film : La naissance de Simba </figcaption>
+                    <figcaption class="article__description">Image from the film: The birth of Simba</figcaption>
                 </figure>
             </div>
 
             <div>
-                <h3 class="article__title">Un appel à la joie de vivre</h3>
-                <p class="article__text">"Hakuna Matata" est bien plus qu'une simple chanson. C'est un appel à la joie de vivre, à la légèreté et à l'acceptation de ce que la vie nous réserve. Les paroles nous rappellent que les préoccupations sont futiles et que le bonheur peut être trouvé dans les petites choses de la vie. C'est une philosophie qui résonne avec des spectateurs de tous âges.</p>
+                <h3 class="article__title">A call to enjoy life</h3>
+                <p class="article__text">"Hakuna Matata" is much more than just a song. It's a call to joie de vivre, lightness and acceptance of what life has in store for us. The lyrics remind us that worries are futile and that happiness can be found in the little things in life. It's a philosophy that resonates with audiences of all ages.</p>
             </div>
 
             <div>
-                <h3 class="article__title">Un héritage durable</h3>
-                <p class="article__text">Depuis sa création, "Hakuna Matata" est devenue une chanson emblématique de la culture populaire. Elle a été reprise et adaptée dans de nombreuses langues et a marqué plusieurs générations. Sa simplicité et son message universel en font une mélodie intemporelle.</p>
+                <h3 class="article__title">An enduring legacy</h3>
+                <p class="article__text">Since its creation, "Hakuna Matata" has become an iconic song in popular culture. It has been covered and adapted in many languages, and has left its mark on several generations. Its simplicity and universal message make it a timeless melody.</p>
             </div>
 
             <div>
-                <h3 class="article__title">La musique de "Hakuna Matata"</h3>
-                <p class="article__text">La musique de "Hakuna Matata" est vivante et rythmée, caractéristique de la joie et de la légèreté qu'elle évoque. Elle est accompagnée d'une animation joyeuse dans le film, montrant Timon, Pumbaa et Simba dansant et chantant dans la jungle. La musique est un élément essentiel de la narration, renforçant le message de la chanson.</p>
-                <p class="article__text">En fin de compte, "Hakuna Matata" est bien plus qu'une chanson de Disney. C'est un hymne à la joie, à la simplicité et à l'acceptation de la vie telle qu'elle vient. Elle nous rappelle que, parfois, il est bon de laisser nos soucis derrière nous et de vivre l'instant présent. "Hakuna Matata", une mélodie qui continue de résonner dans nos cœurs et de nous rappeler l'importance de la légèreté dans nos vies.</p>
+                <h3 class="article__title">The music of "Hakuna Matata"</h3>
+                <p class="article__text">The music of "Hakuna Matata" is lively and rhythmic, characteristic of the joy and lightness it evokes. It is accompanied by joyful animation in the film, showing Timon, Pumbaa and Simba dancing and singing in the jungle. The music is an essential part of the narrative, reinforcing the song's message.</p>
+                <p class="article__text">Ultimately, "Hakuna Matata" is much more than a Disney song. It's a hymn to joy, simplicity and acceptance of life as it comes. It reminds us that, sometimes, it's good to leave our worries behind and live in the moment. "Hakuna Matata", a melody that continues to resonate in our hearts and remind us of the importance of lightness in our lives.</p>
             </div>
 
         </section>
@@ -109,22 +109,22 @@
 
             <div class="article__button-box">
                 <a href="https://www.youtube.com/watch?v=v34w65U98gI&pp=ygUTaGFrdW5hIG1hdGF0YSBmaWxtIA%3D%3D">
-                    <img src="../public/icones/youtube fr.svg" alt="ecoutez sur youtube"></a>
+                    <img src="../public/icones/youtube en.svg" alt="listen on youtube"></a>
             </div>
 
             <div class="article__button-box">
                 <a href="https://deezer.page.link/EBU7Rn9QcvhUKSCs7">
-                    <img src="../public/icones/deezer fr.svg" alt="ecoutez sur deezer"></a>
+                    <img src="../public/icones/deezer en.svg" alt="listen on deezer"></a>
             </div>
 
             <div class="article__button-box">
                 <a href="https://music.apple.com/fr/album/hakuna-matata/712975892?i=712976290">
-                    <img src="../public/icones/apple music fr.svg" alt="ecoutez sur apple music"></a>
+                    <img src="../public/icones/apple music en.svg" alt="listen on apple music"></a>
             </div>
 
             <div class="article__button-box">
                 <a href="https://open.spotify.com/track/3xAfJdO9px9oh1HL7WTh0h?si=5c1e4a74aa474388">
-                    <img src="../public/icones/spotify fr.svg" alt="ecoutez sur spotify"></a>
+                    <img src="../public/icones/spotify en.svg" alt="listen on spotify"></a>
             </div>
 
         </section>
