--- a/en/others-projects.html
+++ b/en/others-projects.html
@@ -47,21 +47,21 @@
     <main>
 
         <div>
-            <h3 class="top__title">Voici une compilation de projets qui partagent la même thématique centrée sur la culture cinématographique. Ces projets sont réalisés par mes camarades de classe.</h3>
+            <h3 class="top__title">There is a compilation of projects who share the same subject about the cinematography. This projects are carried out by my classmates.</h3>
         </div>
 
         <div>
-            <p class="projets__text">”Abyssal Wave” de Samuel Charasse</p>
-            <p class="projets__text">“The long line” de Bosetti Angelo</p>
-            <p class="projets__text">“Ton avenir est entre tes mains” de Liloue Guyot</p>
-            <p class="projets__text">“Mordor’s Direction” de Jérémy Roy</p>
-            <p class="projets__text">“Across the spider-web” de Damage Rayane</p>
-            <p class="projets__text">“My name is Bond, James Bond” de Liegeon Mathis</p>
-            <p class="projets__text">"Unclouded by hate" de Imrane Qerchi</p>
-            <p class="projets__text">“Kill this rabbit” de Pautrat Marion</p>
-            <p class="projets__text">“OppenMind” de Yilmaz Kalan</p>
-            <p class="projets__text">“Oppenheimer” de Moretti Tony</p>
-            <p class="projets__text">“Le Pianiste” de Gachod Pierre</p>
+            <p class="projets__text">”Abyssal Wave” from Samuel Charasse</p>
+            <p class="projets__text">“The long line” from Bosetti Angelo</p>
+            <p class="projets__text">“Ton avenir est entre tes mains” from Liloue Guyot</p>
+            <p class="projets__text">“Mordor’s Direction” from Jérémy Roy</p>
+            <p class="projets__text">“Across the spider-web” from Damage Rayane</p>
+            <p class="projets__text">“My name is Bond, James Bond” from Liegeon Mathis</p>
+            <p class="projets__text">"Unclouded by hate" from Imrane Qerchi</p>
+            <p class="projets__text">“Kill this rabbit” from Pautrat Marion</p>
+            <p class="projets__text">“OppenMind” from Yilmaz Kalan</p>
+            <p class="projets__text">“Oppenheimer” from Moretti Tony</p>
+            <p class="projets__text">“Le Pianiste” from Gachod Pierre</p>
         </div>
 
     </main>
