--- a/en/quote.html
+++ b/en/quote.html
@@ -46,8 +46,8 @@
 
 <main>
         <header class="top">
-            <h2 class="top__title">Quand le monde entier te persécute, tu te dois de persécuter le monde : Le pouvoir de la réplique emblématique du "Roi Lion"</h2>
-            <p class="top__introduction">Dans l'univers cinématographique, certaines répliques transcendent le temps et deviennent des icônes. "Quand le monde entier te persécute, tu te dois de persécuter le monde" est l'une de ces citations mémorables. Cette phrase est extraite du film d'animation bien-aimé de Disney, "Le Roi Lion". Elle est prononcée par le personnage de Timon, un suricate farfelu qui joue un rôle essentiel dans l'histoire de Simba, le jeune lion destiné à devenir roi. Cette citation incarne une philosophie de vie qui, bien que dérivée d'une comédie musicale pour enfants, porte un message profond et universel.</p>
+            <h2 class="top__title">Qhen the whole world persecutes you, you owe it to yourself to persecute the world : The power of the iconic line from "The Lion King"</h2>
+            <p class="top__introduction">In the cinematic universe, certain lines transcend time and become icons. "When the whole world persecutes you, you owe it to yourself to persecute the world" is one such memorable quote. This phrase is taken from Disney's beloved animated film, "The Lion King". It is uttered by the character Timon, a wacky meerkat who plays an essential role in the story of Simba, the young lion destined to become king. The quote embodies a philosophy of life that, although derived from a children's musical, carries a profound and universal message.</p>
             <img class="top__img" src="/public/img/REP1 .webp" alt="Timon">
         </header>
 
@@ -56,45 +56,46 @@
             <div>
                 <figure class="article__figure">
                 <img src="/public/img/REP2.webp" alt="Photo Timon et Pumba" class="article__image">
-                <figcaption class="article__description">Timon et Pumba avant de rencontrer Simba</figcaption>
+                <figcaption class="article__description">Timon & Pumba before meeting Simba</figcaption>
                 </figure>
-                <p class="article__text">La philosophie de "Le Roi Lion" s'articule autour de l'expression swahilie "Hakuna Matata", qui se traduit littéralement par "pas de problème" ou "pas de soucis". Par extension, cette formule invite à adopter une attitude insouciante et épicurienne face aux difficultés de la vie. Elle suggère que les soucis et les problèmes sont des fardeaux inutiles et que la véritable sagesse réside dans la capacité à vivre le moment présent, à embrasser la joie et à faire confiance à son propre destin.</p>
+                <p class="article__text">The philosophy of "The Lion King" revolves around the Swahili expression "Hakuna Matata", which literally translates as "no problem" or "no worries". By extension, this phrase invites us to adopt a carefree, epicurean attitude to life's difficulties. It suggests that worries and problems are unnecessary burdens, and that true wisdom lies in the ability to live in the moment, embrace joy and trust one's own destiny.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                 <img src="/public/img/REP3.webp" alt="Photo Timon, Pumba et Simba" class="article__image">
-                <figcaption class="article__description">Timon, Pumba et Simba qui s'endorment</figcaption>
+                <figcaption class="article__description">Timon, Pumba & Simba who sleep</figcaption>
                 </figure>
-                <p class="article__text">La citation de Timon, bien que moins connue que "Hakuna Matata", partage l'esprit de cette philosophie. Elle nous rappelle que lorsque le monde semble s'acharner contre nous, nous avons le pouvoir de résister, de lutter et de surmonter les obstacles. C'est un appel à lutter pour ce que nous croyons, à persévérer dans l'adversité et à ne pas laisser les circonstances nous abattre.</p>
+                <p class="article__text">Timon's quote, although less well-known than "Hakuna Matata", shares the spirit of this philosophy. It reminds us that when the world seems set against us, we have the power to resist, to fight and to overcome obstacles. It's a call to fight for what we believe in, to persevere in the face of adversity and not let circumstances bring us down.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                 <img src="/public/img/REP4.webp" alt="Photo rencontre Timon, Pumba et Simba" class="article__image">
-                <figcaption class="article__description"> Rencontre Timon, Pumba et Simba</figcaption>
+                <figcaption class="article__description">Meeting betwin Timon, Pumba & Simba</figcaption>
                 </figure>
-                <p class="article__text">Le personnage de Timon lui-même incarne cette philosophie de manière comique. Il est le maître de la dérision et de la légèreté, prônant une vie insouciante au sein de la jungle africaine. Lorsqu'il prononce cette célèbre réplique, il le fait avec une pointe d'ironie, mais le message sous-jacent est clair : nous avons le pouvoir de prendre en main notre propre destin, même lorsque tout semble contre nous.</p>
+                <p class="article__text">The character of Timon himself embodies this philosophy in a comic way. He is the master of derision and lightness, advocating a carefree life in the African jungle. When he utters this famous line, he does so with a touch of irony, but the underlying message is clear: we have the power to take control of our own destiny, even when everything seems against us.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                 <img src="/public/img/REP5.webp" alt="Photo de Rafiki " class="article__image">
-                <figcaption class="article__description">Rafiki le sage</figcaption>
+                <figcaption class="article__description">Rafiki the sage</figcaption>
                 </figure>
-                <p class="article__text">"Quand le monde entier te persécute, tu te dois de persécuter le monde" est une leçon de résilience, de détermination et d'optimisme. Elle nous rappelle que, face à l'adversité, nous pouvons choisir de devenir les maîtres de notre propre destin. Cette citation du "Roi Lion transcende l'écran pour devenir une source d'inspiration dans la vie réelle. Elle nous encourage à persévérer, à surmonter les défis et à poursuivre nos rêves, même lorsque le monde semble être contre nous.</p>
+                <p class="article__text">"When the whole world persecutes you, you owe it to yourself to persecute the world" is a lesson in resilience, determination and optimism. It reminds us that, in the face of adversity, we can choose to become the masters of our own destiny. This quote from "The Lion King" transcends the screen to become a source of inspiration in real life. It encourages us to persevere, overcome challenges and pursue our dreams, even when the world seems to be against us.</p>
             </div>
 
             <div>
                 <figure class="article__figure">
                 <img src="/public/img/REP6.webp" alt="Photo la belle vie " class="article__image">
-                <figcaption class="article__description">Timon, Pumba et Simba vivant heureux</figcaption>
+                <figcaption class="article__description">Timon, Pumba & Simba who live happy</figcaption>
                 </figure>
-                <p class="article__text">En conclusion, cette réplique emblématique de "Le Roi Lion" incarne une philosophie de vie puissante et intemporelle. Elle nous rappelle l'importance de l'insouciance, de la persévérance et de la confiance en notre propre capacité à façonner notre destin. C'est un rappel que, même lorsque le monde entier semble se liguer contre nous, nous avons le pouvoir de persécuter le monde à notre manière, en créant notre propre chemin vers le bonheur et la réussite.</p>
+                <p class="article__text">In conclusion, this iconic line from "The Lion King" embodies a powerful and timeless philosophy of life. It reminds us of the importance of recklessness, perseverance and confidence in our own ability to shape our destiny. It's a reminder that, even when the whole world seems to be ganging up on us, we have the power to persecute the world in our own way, by creating our own path to happiness and success.
+</p>
             </div>
 
             <div class="article__button-box">
-                <a href="/fr/film.html" class="article__button">Lire l'article suivant</a>
+                <a href="/en/movie.html" class="article__button">Read the next article</a>
             </div>
         </section>
 
