--- a/fr/film.html
+++ b/fr/film.html
@@ -109,7 +109,7 @@
             <div class="galerie__card">
                 <div class="galerie__img-container">
                     <img src="../public/img/FILM2.webp" alt="Aladdin">
-                    <a class="galerie__btn" href="https://www.youtube.com/watch?v=foyufD52aog">
+                    <a class="galerie__btn" href="https://www.youtube.com/watch?v=IrzzGm3AmLg">
                         <img src="../public/icones/player.svg" alt="play"></a>
                 </div>
                 <h3 class="galerie__subtitle">"Aladdin" (2019)</h3>
