correction miniature vidéo

--- a/fr/film.html
+++ b/fr/film.html
@@ -148,8 +148,8 @@
         
             <h2 class="galerie__title">Découvrez la bande d'annonce du film</h2>
         
-            <div><video width="720" height="360" controls>
-                    <source src="/public/video/Le Roi Lion (2019) - Bande-annonce officielle (VF) I Disney.mp4"
+            <div><video width="720" height="360" controls poster="/public/img/FILM6.webp">
+                    <source src="/public/video/Le Roi Lion (2019) - Bande-annonce officielle (VF) I Disney.mp4" 
                         type="video/mp4">
             </div>
 
